#11 add organization controller and repo
